Minor bug fixes

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -63,7 +63,7 @@
 			<div class="row">
 				<div class="col-lg-6 mx-auto">
 					<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation" novalidate>
-						<input type="hidden" name="_next" value="www.brianpho.com/HTML/contact.html"/>
+						<input type="hidden" name="_next" value="/HTML/contact.html"/>
 						<input type="hidden" name="_subject" value="Message from brianpho.com"/>
 						<input type="text" name="_gotcha" style="display:none"/>
 						<div class="form-group">
@@ -136,7 +136,7 @@
 			<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7"><i class="fab fa-facebook fa-2x" style="color: black"></i></a>
 			<a class="pr-1 pl-1" href="https://www.linkedin.com/in/brian-pho"><i class="fab fa-linkedin fa-2x" style="color: black"></i></a>
 			<a class="pr-1 pl-1" href="https://github.com/Brian-Pho/"><i class="fab fa-github-square fa-2x" style="color: black"></i></a>
-			<a class="pr-1 pl-1" href="mailto:brian.pho@ucalgary.ca"><i class="fas fa-envelope-square fa-2x" style="color: black"></i></a>
+			<a class="pr-1 pl-1" href="mailto:brainic777@gmail.com"><i class="fas fa-envelope-square fa-2x" style="color: black"></i></a>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
