--- a/404.html
+++ b/404.html
@@ -34,6 +34,6 @@
 	<h2>Error 404: Page Not Found</h2>
 	<p>The page you tried to view does not exist.</p>
 	<br>
-	<a href="index.html"><h2>Return to Homepage</h2></a>
+	<a href="http://brianpho.com/HTML/index.html"><h2>Return to Homepage</h2></a>
 </body>
 </html>
