Removed Bootstrap alert from Contact page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -54,12 +54,6 @@
 				Say hello.
 			</p>
 			<hr>
-			<div class="alert alert-success alert-dismissible fade show" role="alert" hidden>
-				Success! Message sent.
-				<button type="button" class="close" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
 			<div class="row">
 				<div class="col-lg-6 mx-auto">
 					<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation" novalidate>
@@ -78,7 +72,7 @@
 						</div>
 						<div class="form-group">
 							<label for="InputEmail">Your Email</label>
-							<input type="email" class="form-control" id="validationCustom02" name="Sender Email" placeholder="Enter Email" required>
+							<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Enter Email" required>
 							<div class="valid-feedback">
 								Looks good!
 							</div>
@@ -121,16 +115,6 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript">
-		$(document).ready(function() {
-			$("#btn").click(function() {
-				$('#success-alert').removeClass('hidden');
-			});
-			$("button.close").click(function() {
-				$('#success-alert').addClass('hidden');
-			});
-		});
-		</script>
 		<hr>
 		<div class="text-center">
 			<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7"><i class="fab fa-facebook fa-2x" style="color: black"></i></a>
