Minor edits and bug fixes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -50,14 +50,14 @@
 			<h1 class="display-4">Welcome to Brian Pho's Homepage</h1>
 			<p class="lead">
 				Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
-				This website shows the courses I have taken, projects I have been involved in, and information
+				This website shows the courses that I have taken, projects that I have been involved in, and information
 				about me.
 			</p>
 			<hr>
 		</div>
 		<footer>
 			<p class="small text-center">
-				This website is built using <a href="https://getbootstrap.com/">Bootstrap 4</a> and is currently hosted using <a href="https://pages.github.com/">Github Pages.</a> Last Updated Feb 6, 2018.
+				This website is built using <a href="https://getbootstrap.com/">Bootstrap 4</a> and is currently hosted using <a href="https://pages.github.com/">Github Pages.</a> Last Updated Feb 9, 2018.
 			</p>
 		</footer>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
