--- a/HTML/about.html
+++ b/HTML/about.html
@@ -48,7 +48,7 @@
 		</header>
 		<div class="container text-center">
 			<h1 class="display-4">About Me</h1>
-			<blockquote class="blockquote">
+			<blockquote class="blockquote lead">
 				<p>"The unexamined life is not worth living."</p>
 			<footer class="blockquote-footer">Socrates</footer>
 		</blockquote>
