--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -196,9 +196,9 @@
 					functions.
 				</p>
 				<figure class="text-center">
-					<a href="../Images/RingRunner/ringrunner1.png"><img style="max-height:400px" src="../Images/RingRunner/ringrunner1.png" alt="Ring Runner 1" class="img-fluid pb-1"/></a>
-					<a href="../Images/RingRunner/ringrunner2.png"><img style="max-height:400px" src="../Images/RingRunner/ringrunner2.png" alt="Ring Runner 2" class="img-fluid pb-1"/></a>
-					<a href="../Images/RingRunner/ringrunner3.png"><img style="max-height:400px" src="../Images/RingRunner/ringrunner3.png" alt="Ring Runner 3" class="img-fluid pb-1"/></a>
+					<a href="../Images/RingRunner/ringrunner1.jpg"><img style="max-height:400px" src="../Images/RingRunner/ringrunner1.jpg" alt="Ring Runner 1" class="img-fluid pb-1"/></a>
+					<a href="../Images/RingRunner/ringrunner2.jpg"><img style="max-height:400px" src="../Images/RingRunner/ringrunner2.jpg" alt="Ring Runner 2" class="img-fluid pb-1"/></a>
+					<a href="../Images/RingRunner/ringrunner3.jpg"><img style="max-height:400px" src="../Images/RingRunner/ringrunner3.jpg" alt="Ring Runner 3" class="img-fluid pb-1"/></a>
 				</figure>
 			</div>
 			<hr>
