--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -89,7 +89,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #fdece2;">
 				<h2 class="text-center pt-4">Personal: Website (July 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a><a href="http://brianpho.com/OLD_WEBSITE/HTML/index.html" class="btn btn-outline-primary ml-3">Visit Old Website</a></p>
 				<p>
 					This website, the one you're reading this on, is a personal project of mine that I
 					made from scratch over my summer break. I wanted to make a website for multiple reasons. The first reason was
