Minor update and beautify

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,60 +1,66 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link href="../CSS/custom.css" rel="stylesheet">
-		<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
-		<title>About</title>
-		<meta name="DESCRIPTION" content="This is information about Brian Pho."/>
-		<meta name="KEYWORDS" content="Brian Pho, about"/>
-	</head>
-	<body>
-		<header>
-			<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-				<a class="navbar-brand" href="index.html">
-					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
-					Brian Pho
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	    crossorigin="anonymous">
+	<link href="../CSS/custom.css" rel="stylesheet">
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<title>About</title>
+	<meta name="DESCRIPTION" content="This is information about Brian Pho." />
+	<meta name="KEYWORDS" content="Brian Pho, about" />
+</head>
+
+<body>
+	<header>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+			<a class="navbar-brand" href="index.html">
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+			    aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="courses.html">Courses</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="projects.html">Projects</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="gallery.html">Gallery</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="contact.html">Contact</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<div class="container text-center">
-			<h1 class="display-4">About Me</h1>
-			<blockquote class="blockquote lead">
-				<p>"The unexamined life is not worth living."</p>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="courses.html">Courses</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="gallery.html">Gallery</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="about.html">About
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<div class="container text-center">
+		<h1 class="display-4">About Me</h1>
+		<blockquote class="blockquote lead">
+			<p>"The unexamined life is not worth living."</p>
 			<footer class="blockquote-footer">Socrates</footer>
 		</blockquote>
 		<hr>
 		<h2>Resume</h2>
-		<p><a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated Nov 2017)</p>
+		<p>
+			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated Nov 2017)</p>
 		<hr>
 		<h2>Hobbies</h2>
 		<div class="mx-auto text-left w-75">
@@ -63,8 +69,13 @@
 				<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
 				<li>Swimming</li>
 				<li>Binge watching TV shows and anime</li>
-				<li><a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a></li>
-				<li><a href="http://www.imdb.com/user/ur50206176/ratings?ref_=nv_usr_rt_4">IMDB</a><br></li>
+				<li>
+					<a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a>
+				</li>
+				<li>
+					<a href="http://www.imdb.com/user/ur50206176/ratings?ref_=nv_usr_rt_4">IMDB</a>
+					<br>
+				</li>
 			</ul>
 		</div>
 		<hr>
@@ -91,27 +102,46 @@
 		<h2>Favorite Quotes</h2>
 		<blockquote class="blockquote">
 			<p>
-				"Then you don't remember a world without robots. There was a time when humanity faced the universe alone and without a friend. Now he has creatures to help him; stronger creatures than himself, more faithful, more useful, and absolutely devoted to him. Mankind is no longer alone. Have you ever thought of it that way?"
-			<footer class="blockquote-footer">Isaac Asimov in <cite title="Source Title">I, Robot</cite></footer>
+				"Then you don't remember a world without robots. There was a time when humanity faced the universe alone and without a friend.
+				Now he has creatures to help him; stronger creatures than himself, more faithful, more useful, and absolutely devoted
+				to him. Mankind is no longer alone. Have you ever thought of it that way?"
+				<footer class="blockquote-footer">Isaac Asimov in
+					<cite title="Source Title">I, Robot</cite>
+				</footer>
+			</p>
+			<p>
+				"Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important
+				to oneself, or from holding certain views which others find inadmissible."
+				<footer class="blockquote-footer">Carl Jung in
+					<cite title="Source Title">Memories Dreams and Reflections</cite>
+				</footer>
+			</p>
+			<p>
+				"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke
+				some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
+				<footer class="blockquote-footer">Hjalmar Söderberg in
+					<cite title="Source Title">Doctor Glas</cite>
+				</footer>
+			</p>
+			<p>
+				"No, it's impossible. It's impossible to tell anyone what it feels like to be you. It's impossible. We live the same way
+				that we dream - alone."
+				<footer class="blockquote-footer">Joseph Conrad in
+					<cite title="Source Title">Heart of Darkness</cite>
+				</footer>
+			</p>
+		</blockquote>
+		<hr>
+		<p class="text-center">
+			<a href="#top" class="btn btn-outline-info">Back to Top</a>
 		</p>
-		<p>
-			"Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible."
-		<footer class="blockquote-footer">Carl Jung in <cite title="Source Title">Memories Dreams and Reflections</cite></footer>
-	</p>
-	<p>
-		"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
-	<footer class="blockquote-footer">Hjalmar Söderberg in <cite title="Source Title">Doctor Glas</cite></footer>
-</p>
-<p>
-	"No, it's impossible. It's impossible to tell anyone what it feels like to be you. It's impossible. We live the same way that we dream - alone."
-<footer class="blockquote-footer">Joseph Conrad in <cite title="Source Title">Heart of Darkness</cite></footer>
-</p>
-</blockquote>
-<hr>
-<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	    crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	    crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	    crossorigin="anonymous"></script>
 </body>
+
 </html>
