--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,130 +1,147 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<!-- Font Awesome JS -->
-		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-		<link href="../CSS/custom.css" rel="stylesheet">
-		<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
-		<title>Contact</title>
-		<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho."/>
-		<meta name="KEYWORDS" content="Brian Pho, contact"/>
-	</head>
-	<body>
-		<header>
-			<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-				<a class="navbar-brand" href="index.html">
-					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
-					Brian Pho
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	    crossorigin="anonymous">
+	<!-- Font Awesome JS -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+	<link href="../CSS/custom.css" rel="stylesheet">
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
+	<title>Contact</title>
+	<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho." />
+	<meta name="KEYWORDS" content="Brian Pho, contact" />
+</head>
+
+<body>
+	<header>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+			<a class="navbar-brand" href="index.html">
+				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+			    aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="courses.html">Courses</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="projects.html">Projects</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="gallery.html">Gallery</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<div class="container text-center">
-			<h1 class="display-4">Contact</h1>
-			<p class="lead">
-				Say hello.
-			</p>
-			<hr>
-			<div class="row">
-				<div class="col-lg-6 mx-auto">
-					<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation" novalidate>
-						<input type="hidden" name="_next" value="/HTML/contact.html"/>
-						<input type="hidden" name="_subject" value="Message from brianpho.com"/>
-						<input type="text" name="_gotcha" style="display:none"/>
-						<div class="form-group">
-							<label for="InputName">Your Name</label>
-							<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Enter Name" required>
-							<div class="valid-feedback">
-								Looks good!
-							</div>
-							<div class="invalid-feedback">
-								Please enter a name.
-							</div>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="courses.html">Courses</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="gallery.html">Gallery</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="contact.html">Contact
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<div class="container text-center">
+		<h1 class="display-4">Contact</h1>
+		<p class="lead">
+			Say hello.
+		</p>
+		<hr>
+		<div class="row">
+			<div class="col-lg-6 mx-auto">
+				<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation" novalidate>
+					<input type="hidden" name="_next" value="/HTML/contact.html" />
+					<input type="hidden" name="_subject" value="Message from brianpho.com" />
+					<input type="text" name="_gotcha" style="display:none" />
+					<div class="form-group">
+						<label for="InputName">Your Name</label>
+						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Enter Name" required>
+						<div class="valid-feedback">
+							Looks good!
 						</div>
-						<div class="form-group">
-							<label for="InputEmail">Your Email</label>
-							<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Enter Email" required>
-							<div class="valid-feedback">
-								Looks good!
-							</div>
-							<div class="invalid-feedback">
-								Please enter an email.
-							</div>
+						<div class="invalid-feedback">
+							Please enter a name.
 						</div>
-						<div class="form-group">
-							<label for="InputMessage">Message</label>
-							<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Hey is for horses." required></textarea>
-							<div class="valid-feedback">
-								Looks good!
-							</div>
-							<div class="invalid-feedback">
-								Please enter a message.
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="InputEmail">Your Email</label>
+						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Enter Email" required>
+						<div class="valid-feedback">
+							Looks good!
 						</div>
-						<button type="submit" class="btn btn-outline-primary" id="btn">Submit</button>
-					</form>
-					<script>
+						<div class="invalid-feedback">
+							Please enter an email.
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="InputMessage">Message</label>
+						<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Hey is for horses." required></textarea>
+						<div class="valid-feedback">
+							Looks good!
+						</div>
+						<div class="invalid-feedback">
+							Please enter a message.
+						</div>
+					</div>
+					<button type="submit" class="btn btn-outline-primary" id="btn">Submit</button>
+				</form>
+				<script>
 					// Example starter JavaScript for disabling form submissions if there are invalid fields
-					(function() {
-					'use strict';
-					window.addEventListener('load', function() {
-						// Fetch all the forms we want to apply custom Bootstrap validation styles to
-						var forms = document.getElementsByClassName('needs-validation');
-						// Loop over them and prevent submission
-						var validation = Array.prototype.filter.call(forms, function(form) {
-							form.addEventListener('submit', function(event) {
-								if (form.checkValidity() === false) {
-									event.preventDefault();
-									event.stopPropagation();
-								}
-								form.classList.add('was-validated');
+					(function () {
+						'use strict';
+						window.addEventListener('load', function () {
+							// Fetch all the forms we want to apply custom Bootstrap validation styles to
+							var forms = document.getElementsByClassName('needs-validation');
+							// Loop over them and prevent submission
+							var validation = Array.prototype.filter.call(forms, function (form) {
+								form.addEventListener('submit', function (event) {
+									if (form.checkValidity() === false) {
+										event.preventDefault();
+										event.stopPropagation();
+									}
+									form.classList.add('was-validated');
 								}, false);
 							});
 						}, false);
 					})();
-					</script>
-				</div>
+				</script>
 			</div>
-			<hr>
 		</div>
-		<div class="text-center">
-			<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7"><i class="fab fa-facebook fa-2x" style="color: black"></i></a>
-			<a class="pr-1 pl-1" href="https://www.linkedin.com/in/brian-pho"><i class="fab fa-linkedin fa-2x" style="color: black"></i></a>
-			<a class="pr-1 pl-1" href="https://github.com/Brian-Pho/"><i class="fab fa-github-square fa-2x" style="color: black"></i></a>
-			<a class="pr-1 pl-1" href="mailto:brainic777@gmail.com"><i class="fas fa-envelope-square fa-2x" style="color: black"></i></a>
-		</div>
+		<hr>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<div class="text-center">
+		<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7">
+			<i class="fab fa-facebook fa-2x" style="color: black"></i>
+		</a>
+		<a class="pr-1 pl-1" href="https://www.linkedin.com/in/brian-pho">
+			<i class="fab fa-linkedin fa-2x" style="color: black"></i>
+		</a>
+		<a class="pr-1 pl-1" href="https://github.com/Brian-Pho/">
+			<i class="fab fa-github-square fa-2x" style="color: black"></i>
+		</a>
+		<a class="pr-1 pl-1" href="mailto:brainic777@gmail.com">
+			<i class="fas fa-envelope-square fa-2x" style="color: black"></i>
+		</a>
+	</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	    crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	    crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	    crossorigin="anonymous"></script>
 </body>
+
 </html>
