--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,6 +42,9 @@
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
@@ -54,8 +57,9 @@
 	<div class="container text-center">
 		<h1 class="display-4">Welcome to Brian Pho's Homepage</h1>
 		<p class="lead">
-			Hello, I am a 4<sup>th</sup> year software engineering student at the University of Calgary. 
-			This website shows the courses that I have taken, projects that I have been involved in, and information about me.
+			Hello, I am a 4
+			<sup>th</sup> year software engineering student at the University of Calgary. This website shows the courses that I have taken,
+			projects that I have been involved in, and information about me.
 		</p>
 		<hr>
 	</div>
