--- a/HTML/about.html
+++ b/HTML/about.html
@@ -39,6 +39,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
 					<li class="nav-item active">
 						<a class="nav-link" href="about.html">About
 							<span class="sr-only">(current)</span>
