--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -42,6 +42,9 @@
 						<a class="nav-link" href="gallery.html">Gallery</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
