Contact and project page updates

--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -58,7 +58,7 @@
 		<h1 class="text-center display-4">Projects</h1>
 		<p class="lead">
 			The following are projects that I have been involved in. The list is ordered with the most recent project at the top. Most
-			of the projects have been a part of school but this website is a personal endeavor. My GitHub can be found
+			of the projects have been a part of school but some of the projects are a personal endeavor. My GitHub can be found
 			<a href="https://github.com/Brian-Pho"> here</a>.
 		</p>
 		<hr>
@@ -69,18 +69,11 @@
 				<a href="https://github.com/Brian-Pho/CR4-DL" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				This website, the one you're reading this on, is a personal project of mine that I made from scratch over my summer break.
-				I wanted to make a website for multiple reasons. The first reason was to learn a new programming language (HTML and CSS
-				in this case) and apply it immediately. Second was because I am going to be applying for internships soon and having
-				a website is useful in showcasing my past projects and info about me. The last reason was because I love programming
-				and find it fun!
-			</p>
-			<p>
-				This is the first time I've programmed in HTML and it's different from the Java and C programming that I'd previously done.
-				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to the textbook
-				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and it made HTML and CSS
-				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open Sans and the
-				text font is Roboto which are provided by Google Fonts.
+				I made another website (because I love making them) to store my notes on AI and the brain. The CR4-DL (Cradle) is different
+				from this website because it was built using
+				<a href="https://jekyllrb.com/">Jekyll</a>, a static site generator. It was fun to modify the theme to fit my needs as it required changing some of the
+				<a href="https://shopify.github.io/liquid/">Liquid</a> code. Overall, I am very proud of the website because it looks clean, the name is witty, the timeline is beautiful,
+				and because it will eventually store the fruits of my self-studying labor.
 			</p>
 			<div id="carouselCradle" class="carousel slide" data-interval="false">
 				<ol class="carousel-indicators">
@@ -120,25 +113,16 @@
 				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				This project was done in a group of three where the goal was to create a bug tracking system using a software engineering
-				design methodology. Due to the nature of being in school, we only had time to do a simple linear development process
-				which has an analysis, design, and implementation phase. The analysis phase included creating a use-case diagram, sequence
-				diagram, and activity diagram for obtaining a high level overview of the functional requirements and constraints. The
-				design phase then moved onto more detailed diagrams such as a UML class diagram, deployment diagram, and state transition
-				diagram for a bug. Lastly, the project was implemented in Java where Git and IntelliJ were used to code the project.
+				The goal of this project was to build a system to store and track software bugs. A user is able to submit a bug report that
+				is then approved by a manager. Once the manager approves/disapproves of the bug, it's then assigned to a developer to
+				be fixed. When the bug is fixed, the developer marks the bug as fixed and carries on.
 			</p>
 			<p>
-				The project is a system used by developers and managers for tracking software bugs reported by users. A user is able to submit
-				a bug report that is then approved by the manager. Once the manager approves/disapproves of the bug, it is then assigned
-				to a developer to be fixed. When the bug is fixed, the developer marks the bug as fixed and carries on. This project
-				did not require the use of a database so a simple text file was used.
-			</p>
-			<p>
-				From this project I learned how a software engineer might go through the process of developing a good piece of software.
+				From this project, I learned how a software engineer might go through the process of developing a good piece of software.
 				It was interesting how the initial analysis and design phases made it easier to implement the program afterwards as most
-				of the thinking had been done during those two phases. The implementation just required converting the diagrams into
-				code which isn't too bad. I had some fun times during the project such as implementing a singleton design pattern for
-				the login and creating the GUIs.
+				of the thinking had been done during those two phases. The implementation required converting various diagrams into code
+				which wasn't too bad. I had some fun times during the project such as implementing a singleton design pattern for the
+				login and creating the GUIs.
 			</p>
 			<div id="carouselBug" class="carousel slide" data-interval="false">
 				<ol class="carousel-indicators">
@@ -182,18 +166,18 @@
 				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				This website, the one you're reading this on, is a personal project of mine that I made from scratch over my summer break.
-				I wanted to make a website for multiple reasons. The first reason was to learn a new programming language (HTML and CSS
-				in this case) and apply it immediately. Second was because I am going to be applying for internships soon and having
-				a website is useful in showcasing my past projects and info about me. The last reason was because I love programming
+				This website, the one you're reading this on, is a personal project of mine that I made (from scratch) over my summer break.
+				I wanted to make a website for multiple reasons. My first reason was to learn a new programming language (HTML and CSS)
+				and to apply it immediately. My second reason was because I will be applying to internship positions soon and having
+				a website is useful to showcase my past projects and present info about me. My last reason was because I love programming
 				and find it fun!
 			</p>
 			<p>
 				This is the first time I've programmed in HTML and it's different from the Java and C programming that I'd previously done.
 				HTML is similar to LaTeX, a language used for note taking, so I learned it quickly. I also owe my knowledge to the textbook
-				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and it made HTML and CSS
+				<i>HTML and CSS: Design and Build Websites</i> by Jon Duckett. I read this textbook to learn HTML and CSS and it made them
 				easy for me to understand. This website is currently hosted using Github Pages. The header font is Open Sans and the
-				text font is Roboto which are provided by Google Fonts.
+				text font is Roboto which are both provided by Google Fonts.
 			</p>
 			<div id="carouselWebsite" class="carousel slide" data-interval="false">
 				<ol class="carousel-indicators">
@@ -225,17 +209,16 @@
 				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
 			</p>
 			<p>
-				While this project was part of my database class, it can be thought of as a continuation and combination of my last two projects.
-				This project was done in a group of three and I was assigned to do the UI aspect of the app. For this project, my group
-				had to create an app that connected to a database (mySQL) and retrieve data from the database using SQL queries. This
-				project was challenging because the project required the use of multiple programming languages (Java, SQL, PHP, and XML)
-				and required the use of an external server to host the data.
+				This project was done in a group of three and I was assigned to do the UI aspect of the app. My group had to create an app
+				that connected to a database (mySQL) and retrieved data from the database using SQL queries. This project was challenging
+				because the project required the use of multiple programming languages (Java, SQL, PHP, and XML) and required the use
+				of an external server to host the data.
 			</p>
 			<p>
-				The purpose of this project was to allow library users access to the library database from the app. Their are two different
-				users, users and admins, with admins having additional functionalities. Their were a lot of functions that we had to
-				incorporate such as search, add, delete, and update which increased the complexity of the project. Overall, this project
-				was very challenging but I learned a lot from it.
+				The purpose of this project was to allow library users access to the library database via the app. There are two different
+				users: normal users and admins. There were a lot of functions that we had to incorporate such as search, add, delete,
+				and update which increased the complexity of the project. Overall, this project was very challenging but I learned a
+				lot from it.
 			</p>
 			<div id="carouselLibrary" class="carousel slide" data-interval="false">
 				<ol class="carousel-indicators">
@@ -285,12 +268,11 @@
 			<p>
 				This was my first project that involved the use of a database (mySQL). This project was done in a group of three where I
 				had the role of designing the UI for the program. The UI was built using Java and IntelliJ. The purpose of this program
-				was to connect to an external database and relay information back and forth from the client and server.
+				was to connect to an external database and to relay information between the client and the server.
 			</p>
 			<p>
-				There are two different types of users, clients and admins, both of which have different functionalities. The program allows
-				users to book a flight and view the current flights to and from there destination. Only admins are able to add and view
-				all tickets.
+				There are two different types of users: clients and admins. The program allows users to book a flight and view the current
+				flights to and from there destination. Only admins are able to add and view all tickets.
 			</p>
 			<div id="carouselAirlines" class="carousel slide" data-interval="false">
 				<ol class="carousel-indicators">
