--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -70,7 +70,7 @@
 					<input type="text" name="_gotcha" style="display:none" />
 					<div class="form-group">
 						<label for="InputName">Your Name</label>
-						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Enter Name" required>
+						<input type="text" class="form-control" id="validationCustom01" name="Sender Name" placeholder="Gimme name" required>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
@@ -80,7 +80,7 @@
 					</div>
 					<div class="form-group">
 						<label for="InputEmail">Your Email</label>
-						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Enter Email" required>
+						<input type="email" class="form-control" id="validationCustom02" name="_replyto" placeholder="Gimme email" required>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
@@ -90,7 +90,7 @@
 					</div>
 					<div class="form-group">
 						<label for="InputMessage">Message</label>
-						<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Hey is for horses." required></textarea>
+						<textarea name="Message" class="form-control" id="validationCustom03" rows="5" placeholder="Gimme credit card number" required></textarea>
 						<div class="valid-feedback">
 							Looks good!
 						</div>
