Update about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -102,14 +102,36 @@
 			</ul>
 		</div>
 		<hr>
+		<h2>Favorite Songs</h2>
+		<div class="mx-auto text-left w-75">
+			<ul>
+				<li>
+					<a href="https://www.youtube.com/watch?v=c9FETXumq1w">Felix Cartal - Keep Up (ft. Steph Jones)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=wHwCWi-Cb7Y">The Chainsmokers - Wake Up Alone (Fairlane Remix)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=fnW6jtbvUnw">Karra - Dream Catcher (Massive Vibes Remix)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=joObCxKlZfw">Sasha Sloan - Normal</a>
+				</li>
+			</ul>
+		</div>
+		<hr>
+		<h2>Timeline</h2>
+		<div class="mx-auto text-left w-75">
+			<p>TODO</p>
+		</div>
+		<hr>
 		<h2>Favorite Quotes</h2>
 		<blockquote class="blockquote">
 			<p>
-				"Then you don't remember a world without robots. There was a time when humanity faced the universe alone and without a friend.
-				Now he has creatures to help him; stronger creatures than himself, more faithful, more useful, and absolutely devoted
-				to him. Mankind is no longer alone. Have you ever thought of it that way?"
-				<footer class="blockquote-footer">Isaac Asimov in
-					<cite title="Source Title">I, Robot</cite>
+				"The story so far: In the beginning the universe was created. This has made a lot of people very angry and been widely regarded
+				as a bad move."
+				<footer class="blockquote-footer">Douglas Adams in
+					<cite title="Source Title">The Restaurant at the End of the Universe</cite>
 				</footer>
 			</p>
 			<p>
@@ -117,13 +139,6 @@
 				to oneself, or from holding certain views which others find inadmissible."
 				<footer class="blockquote-footer">Carl Jung in
 					<cite title="Source Title">Memories Dreams and Reflections</cite>
-				</footer>
-			</p>
-			<p>
-				"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke
-				some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
-				<footer class="blockquote-footer">Hjalmar Söderberg in
-					<cite title="Source Title">Doctor Glas</cite>
 				</footer>
 			</p>
 			<p>
