Adjust CSS and about page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -66,7 +66,7 @@
 			<a href="../Resume_Brian_Pho.pdf" target="_blank">Download Resume</a> (Last Updated Nov 2017)</p>
 		<hr>
 		<h2>Hobbies</h2>
-		<div class="mx-auto text-left w-75">
+		<div class="mx-auto text-left about">
 			<ul>
 				<li>Reading (Science Fiction and Non-Fiction)</li>
 				<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
@@ -83,7 +83,7 @@
 		</div>
 		<hr>
 		<h2>Passions</h2>
-		<div class="mx-auto text-left w-75">
+		<div class="mx-auto text-left about">
 			<ul>
 				<li>Philosophy</li>
 				<li>Computer Science</li>
@@ -94,7 +94,7 @@
 		</div>
 		<hr>
 		<h2>Random Skills</h2>
-		<div class="mx-auto text-left w-75">
+		<div class="mx-auto text-left about">
 			<ul>
 				<li>Building computers</li>
 				<li>Investing (index funds)</li>
@@ -103,7 +103,7 @@
 		</div>
 		<hr>
 		<h2>Favorite Songs</h2>
-		<div class="mx-auto text-left w-75">
+		<div class="mx-auto text-left about">
 			<ul>
 				<li>
 					<a href="https://www.youtube.com/watch?v=c9FETXumq1w">Felix Cartal - Keep Up (ft. Steph Jones)</a>
@@ -121,7 +121,7 @@
 		</div>
 		<hr>
 		<h2>Timeline</h2>
-		<div class="mx-auto text-left w-75">
+		<div class="mx-auto text-left about">
 			<p>TODO</p>
 		</div>
 		<hr>
