Update readme and various other improvements

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -86,10 +86,10 @@
 		<div class="mx-auto text-left about">
 			<ul>
 				<li>Philosophy</li>
-				<li>Computer Science</li>
 				<li>Neuroscience</li>
-				<li>Psychology</li>
+				<li>Artificial Intelligence</li>
 				<li>Learning</li>
+				<li>Space</li>
 			</ul>
 		</div>
 		<hr>
@@ -99,6 +99,7 @@
 				<li>Building computers</li>
 				<li>Investing (index funds)</li>
 				<li>IT stuff (the family IT guy)</li>
+				<li>Skincare</li>
 			</ul>
 		</div>
 		<hr>
@@ -115,16 +116,24 @@
 					<a href="https://www.youtube.com/watch?v=fnW6jtbvUnw">Karra - Dream Catcher (Massive Vibes Remix)</a>
 				</li>
 				<li>
+					<a href="https://www.youtube.com/watch?v=5ttZsnDPka4">Snakehips & MØ - Don't Leave (Gryffin Remix)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=W2AF8jH84o0">Borgeous, Taylr Renee - Sweeter Without You (Zack Martino Remix)</a>
+				</li>
+				<li>
 					<a href="https://www.youtube.com/watch?v=joObCxKlZfw">Sasha Sloan - Normal</a>
 				</li>
 			</ul>
 		</div>
 		<hr>
+		<!--
 		<h2>Timeline</h2>
 		<div class="mx-auto text-left about">
 			<p>TODO</p>
 		</div>
 		<hr>
+ 		-->
 		<h2>Favorite Quotes</h2>
 		<blockquote class="blockquote">
 			<p>
