--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-light nav1">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html">
 				<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
 			</a>
@@ -63,8 +63,8 @@
 		</p>
 		<hr>
 		<!-- Find additional project colors here: http://hslpicker.com/#ede2fd -->
-		<div class="container pl-5 pr-5 pb-4" style="background-color: #f0f0f0;">
-			<h2 class="text-center pt-4">Personal: CR4-DL (July 2018)</h2>
+		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #f0f0f0;">
+			<h2 class="text-center ">Personal: CR4-DL (July 2018)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/CR4-DL" class="btn btn-outline-primary">Source Code</a>
 			</p>
@@ -107,8 +107,8 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4" style="background-color: #fde2e2;">
-			<h2 class="text-center pt-4">ENSF 480: Bug Tracking System (Nov 2017)</h2>
+		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #fde2e2;">
+			<h2 class="text-center ">ENSF 480: Bug Tracking System (Nov 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a>
 			</p>
@@ -160,8 +160,8 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4" style="background-color: #fdece2;">
-			<h2 class="text-center pt-4">Personal: Website (July 2017)</h2>
+		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #fdece2;">
+			<h2 class="text-center ">Personal: Website (July 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a>
 			</p>
@@ -203,8 +203,8 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4" style="background-color: #e3f2fd;">
-			<h2 class="text-center pt-4">CPSC 471: Library Database Management System (June 2017)</h2>
+		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e3f2fd;">
+			<h2 class="text-center ">CPSC 471: Library Database Management System (June 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
 			</p>
@@ -260,8 +260,8 @@
 			</div>
 		</div>
 		<hr>
-		<div class="container pl-5 pr-5 pb-4" style="background-color: #e4e2fd;">
-			<h2 class="text-center pt-4">ENSF 409: Airlines Registration (April 2017)</h2>
+		<div class="container pl-5 pr-5 pb-4 pt-4" style="background-color: #e4e2fd;">
+			<h2 class="text-center ">ENSF 409: Airlines Registration (April 2017)</h2>
 			<p>
 				<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source Code</a>
 			</p>
