--- a/HTML/index.html
+++ b/HTML/index.html
@@ -57,8 +57,7 @@
 	<div class="container text-center">
 		<h1 class="display-4">Welcome to Brian Pho's Homepage</h1>
 		<p class="lead">
-			Hello, I am a 4
-			<sup>th</sup> year software engineering student at the University of Calgary. This website shows the courses that I have taken,
+			Hello, I am a 4<sup>th</sup> year software engineering student at the University of Calgary. This website shows the courses that I have taken,
 			projects that I have been involved in, and information about me.
 		</p>
 		<hr>
